# p2dux

./: .gitignore  Cargo.toml
src/: lib.rs
src/gfx/: draw.rs  mod.rs  texture.rs
src/ui/: menu.rs  mod.rs
src/view/: mod.rs  prefab.rs
